Correct issues with long names sticking out in cast and crew lists

--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -21,7 +21,7 @@
 
 .cast-crew-list dd {
   display: inline-block;
-  min-width: 140px;
+  min-width: 150px;
   float: right;
 }
 
